@@ -9,6 +9,7 @@
 * master(unrelease)
 ** New Features
 - Sync repositories in background threads, which will not hang Emacs anymore. 🍺
+- Download asset in background threads, which will not hang Emacs anymore. 🍺
 
 * v0.3.0 (2022-04-22)
 ** New Features
